feat#106: 로컬&배포 이원화